@@ -1,3 +1,9 @@
+2009-08-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am (CPU_SOURCES): Replace mep-ivc2.cxx with
+	ivc2-cop.cxx.
+	* Makefile.in: Regenerate.
+
 2009-07-06  DJ Delorie  <dj@redhat.com>
 
 	* mep-cop1-16-decode.cxx: Regenerate.
